syntax = "proto3";

package store;

message KeyRequest {
  string key = 1;
}

message GetResponse {
  string key = 1;
  string value = 2;
}

message PutRequest {
  string key = 1;
  string value = 2;
}

message PutResponse {
  string key = 1;
  string value = 2;
}

message DeleteResponse {
  string key = 1;
  string value = 2;
}

service StoreService {
  rpc Get(KeyRequest) returns (GetResponse);
  // add or overwrite
  rpc Put(PutRequest) returns (PutResponse);
  rpc Delete(KeyRequest) returns (DeleteResponse);
}

// https://protobuf.dev/programming-guides/proto3/
